# deepagents

./: .gitignore
examples/case-writer/: AGENTS.md  case_writer.py  convert-to-docx.py  pedagogy.md  personae.md  pyproject.toml  scenario.md  subagents.yaml
examples/case-writer/skills/contingency-builder/: SKILL.md
